Got rid of references to internal Raster Types (for now?)